增加用户登录接口，支持通过命令行增加超级管理员用户
